app/base/apps/notification/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  namespace: default
spec:
  selector:
    app: notification
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: notification-svc-db
  namespace: default
spec:
  clusterIP: None
  ports:
  - protocol: TCP
    name: notification-svc-db
    port: 1433
    targetPort: 1433
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: notification-svc-db
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - port: 1433
        name: notification-svc-db
